# ucode

./: .gitignore  README.md  components.d.ts  index.html  package.json  vite.config.ts
src/: App.svelte  App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/common/: check.rs  config.rs  config.toml  mod.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/model/: code.rs
src-tauri/src/sql/: code.rs  mod.rs  tag.rs
src/components/: Button.vue  Code.vue  Greet.vue  Input.vue  Tag.vue  textInput.vue
src/lib/: Greet.svelte
