[package]
name = "ucode"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0", features = ["api-all"] }
tokio = { version = "1.0", features = ["full"] }
cang-jie = "0.14.0"
jieba-rs = "0.6.6"
tantivy = "0.18.0"
rbs = { version = "0.1" }
rbatis = { version = "4.0" }
rbdc-sqlite = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
once_cell = "1.14.0"
anyhow = "1.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
